# OnlineShop_Python

./: README.md  conftest.py  pyproject.toml  pytest.ini
configs/: default.json  urls.py
enums/: menu_item.py
pages/: base_page.py  cart_page.py  inventory_page.py  login_page.py
pages/checkout_pages/: base_checkout_page.py  complete_page.py  overview_page.py  your_information_page.py
pages/components/: base_component.py  header.py  menu_container.py  product_card.py
pages/models/: product_card.py
test_data/: login_test_data.py  users.py
tests/: test_login.py  test_order_products.py  test_product_cards.py
units/: config.py
