[tool.poetry]
name = "onlineshop-python"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
pytest = ">=8.3.5,<9.0.0"
playwright = ">=1.51.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
pytest-xdist = "^3.6.1"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"